# creative-agent

./: .env.example  .gitignore  .markdown-link-check.json  AGENTS.md  CLAUDE.md  Harness Engineering 驾驭工程.md  QUALITY_SCORE.md  README.md  feature_list.json  init.sh  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/memory/: agent_experiences.json
.github/workflows/: ci.yml
docs/: architecture.md
docs/design-docs/: decisions.md
docs/exec-plans/: 2026-03-28-constraint-injection.md  README.md
docs/references/: README.md
scripts/: check_env.py  rollback.py  verify.py
server/: embed_server.py  nlu_server.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  critic.py  director.py  kg_builder.py  plot_architect.py  prose_writer.py  researcher.py  reviewer.py  writer.py
src/constraints/: __init__.py  rules.py
src/feedback/: __init__.py  evaluator.py
src/harness/: __init__.py  agent_memory.py  docs.py  e2e.py  entropy.py  feedback_loop.py  learning.py  provider.py  retry.py  updater.py  verifier.py
src/output/: __init__.py
src/persistence/: __init__.py  checkpoint.py
src/tools/: __init__.py  advanced_graph_tools.py  continuity.py  file_ops.py  graph_service.py  graph_tools.py  lightrag.py  smart_graph_tools.py
src/tools/kg_extractor/: __init__.py  document_parser.py  entity_extractor.py  relation_extractor.py  trace_logger.py
src/tools/kg_storage/: __init__.py  entity_index.py  graph_service.py  models.py  neo4j_client.py
src/workflow/: __init__.py  orchestrator.py  state.py
tests/: test_researcher.py  test_workflow.py
tests/kg_stages/: README.md  debug_llm.py  debug_relations.py  test_1_parse.py  test_2_entities.py  test_3_relations.py  test_all.py  view_results.py
